@@ -16,6 +16,10 @@
    - markus@cvs.openbsd.org 2002/11/21 22:45:31
      [cipher.c kex.c packet.c sshconnect.c sshconnect2.c]
      debug->debug2, unify debug messages
+   - deraadt@cvs.openbsd.org 2002/11/21 23:03:51
+     [auth-krb5.c auth1.c hostfile.h monitor_wrap.c sftp-client.c sftp-int.c ssh-add.c ssh-rsa.c 
+      sshconnect.c]
+     KNF
 
 20021205
  - (djm) PERL-free fixpaths from stuge-openssh-unix-dev@cdy.org
@@ -851,4 +855,4 @@
      save auth method before monitor_reset_key_state(); bugzilla bug #284;
      ok provos@
 
-$Id: ChangeLog,v 1.2519 2002/12/23 02:04:22 mouring Exp $
+$Id: ChangeLog,v 1.2520 2002/12/23 02:06:19 mouring Exp $
